--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 ### GENERAL SETTINGS ###
 
 # Site settings
-title: SOLID.
-description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
+title: Engineering Mentorship 101
+description: "Online Portfolio for UC San Diego Fall 2014 CAT 125 course."
 analytics: UA-50546869-2
 baseurl: "/engmentor101" #important: start with /
 url: "http://xueyj.github.io"
@@ -26,16 +26,11 @@ colors:  #in hex code if not noted else
 
 # Social networks usernames. Many more available: google-plus, flickr, linkedin, etc). Shown in footer.
 social:
-  - title: dribbble
-    url:
-  - title: facebook
-    url:
-  - title: twitter
-    url: 
-  - title: instagram
-    url: 
-  - title: tumblr
-    url: 
+  - title: linkedin
+  	url: https://www.linkedin.com/in/xuerik
+  - title: github
+  	url: https://github.com/xueyj
+
     
 # Postal address (add as many lines as necessary). Shown in footer and on Contact page.
 address:
@@ -49,27 +44,28 @@ Phone: (626) xxx-xxxx
 ### GENERAL DATA FOR VARIOUS LOCATIONS ###
     
 # Members information. Shown on About page.
-members:
-  - name: Laura Sommers
-    position: Lead Developer
-    text: Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-    img: team03.jpg
-    social:
-      - title: envelope #use for email address
-        url: mailto:name@domain.com
-      - title: twitter
-        url: http://twitter.com/handle
+
+# members:
+#   - name: Laura Sommers
+#     position: Lead Developer
+#     text: Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+#     img: team03.jpg
+#     social:
+#       - title: envelope #use for email address
+#         url: mailto:name@domain.com
+#       - title: twitter
+#         url: http://twitter.com/handle
 
 # Clients information. Shown on Home and About pages.
-clients:
-  - name: dribbble
-    img: client01.png
+# clients:
+#   - name: dribbble
+#     img: client01.png
 
 # Short text about your company. Shown in footer on every page and also separately on Home and Contact page.
-about: "ABC"
+about: "Engineering Mentorship 101 is a free website to provide to you, useful content. Copyright Erik Xu."
 
 # Testimonial content. Shown on Home and About page. 
-testimonial:
-    message: "..."
-    author: Erik Xu
-    position:
+# testimonial:
+#     message: "..."
+#     author: Erik Xu
+#     position:
