--- a/_config.yml
+++ b/_config.yml
@@ -26,8 +26,8 @@ colors:  #in hex code if not noted else
 
 # Social networks usernames. Many more available: google-plus, flickr, linkedin, etc). Shown in footer.
 social:
-  - title: linkedin
-  	url: https://www.linkedin.com/in/xuerik
+  # - title: linkedin
+  # 	url: https://www.linkedin.com/in/xuerik
   - title: github
   	url: https://github.com/xueyj
 
