--- a/_config.yml
+++ b/_config.yml
@@ -28,8 +28,8 @@ colors:  #in hex code if not noted else
 social:
   # - title: linkedin
   # 	url: https://www.linkedin.com/in/xuerik
-  - title: github
-  	url: https://github.com/xueyj
+  # - title: github
+  # 	url: https://github.com/xueyj
 
     
 # Postal address (add as many lines as necessary). Shown in footer and on Contact page.
