--- a/_config.yml
+++ b/_config.yml
@@ -29,4 +29,5 @@ address:
 Email: dixu@ucsd.edu
 Phone: (626) xxx-xxxx
 
-about: "Engineering Mentorship 101 is a free website to provide to you, useful content. Copyright Erik Xu."
+about: "Engineering Mentorship 101 is a website to provide to you, useful content. 
+Created by Erik Xu."
