--- a/_config.yml
+++ b/_config.yml
@@ -30,3 +30,5 @@ Email: dixu@ucsd.edu
 Phone: (626) xxx-xxxx
 
 about: "Engineering Mentorship 101 is a website to provide useful content for aspiring engineers and hobbyists. Created by Erik Xu."
+social: "Github: https://github.com/xueyj"
+"Website Source: https://github.com/xueyj/engmentor101"
