--- a/_config.yml
+++ b/_config.yml
@@ -30,5 +30,9 @@ Email: dixu@ucsd.edu
 Phone: (626) xxx-xxxx
 
 about: "Engineering Mentorship 101 is a website to provide useful content for aspiring engineers and hobbyists. Created by Erik Xu."
-social: "Github: https://github.com/xueyj"
-"Website Source: https://github.com/xueyj/engmentor101"
+
+social: 
+  - title: GitHub
+    url:  https://github.com/xueyj
+  - title: Website Source Code
+    url:  https://github.com/xueyj/engmentor101
