--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ Phone: (626) xxx-xxxx
 about: "Engineering Mentorship 101 is a website to provide useful content for aspiring engineers and hobbyists. Created by Erik Xu."
 
 social: 
-  - title: GitHub
-    url:  https://github.com/xueyj
-  - title: Website Source Code
-    url:  https://github.com/xueyj/engmentor101
+  title: GitHub
+  url:  https://github.com/xueyj
+  title: Website Source Code
+  url:  https://github.com/xueyj/engmentor101
