Updated Index and Header

--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ address:
 Email: dixu@ucsd.edu
 # Phone: (626) xxx-xxxx
 
-about: "Engineering Mentorship 101 is a website to provide useful content for aspiring engineers and hobbyists. Created by Erik Xu."
+about: "Engineering Mentorship 101 is a website to provide useful content for aspiring student engineers and hobbyists.\nCreated by Erik Xu."
 
 # social: 
 #   - title: GitHub
